# Glote

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: lib.rs  response.rs  server.rs  workerpool.rs
src/cors/: mod.rs
src/request/: mod.rs
src/response/: mod.rs
src/server/: macros.rs  mod.rs
src/workerpool/: mod.rs  test.rs
test/: main_test.rs
tests/: main_test.rs  workerpool_test.rs
