[package]
name = "glote"
version = "0.3.0"
edition = "2024"
description = "A fast Rust web library"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/sufal54/Glote"
keywords = ["web", "restfullapi", "server", "http", "api"]
categories = ["web-programming::http-server"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["full"] }
